<resources>
    <!-- Titles -->
    <string name="app_name">Linker</string>
    <string name="share_link_title">Share link</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Labels -->
    <string name="label_select_server">Click servers to share with</string>
    <string name="app_descr">Share all the things!</string>

    <!-- Dialogs -->
    <string name="dialog_add_server_title">Add server</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_add">Add</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <!-- Toasts -->
    <string name="toast_back_to_exit">Click back once again to exit</string>
    <string name="toast_server_added">Server added.</string>
    <string name="toast_error_url_compile">Could not compile valid URL. Please check the input provided</string>
    <string name="toast_server_exists">A server with the provided information already exists</string>

    <!-- TEMP TODO-->
    <string name="add">Add Value</string>
    <string name="listview">List View</string>
    <string name="recyclerview">Recycler View</string>
    <string name="add_random">Random Edits</string>
    <string name="delete_all">Delete All</string>


    <!-- Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>


    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_dashboard_title">Dashboard</string>


    <!-- Spinner inputs -->
    <string-array name="protocols">
        <item>HTTP</item>
        <item>HTTPS</item>
    </string-array>


    <!-- Input hints -->
    <string name="hint_ip">IP</string>
    <string name="hint_port">Port</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>


    <!-- Input errors -->
    <string name="error_et_generic">Please fill in the field correctly</string>

    <!-- Dialog errors -->
    <string name="error_dlg_schema_update">Could not update database to the latest version.\n
                                            Please delete the application data and try again</string>

    <!-- Toast errors-->
    <string name="error_toast_unknown">Oh no! You broke it!</string>
    <string name="error_toast_server_offline">Server offline!</string>


    <!-- Buttons -->
    <string name="btn_str_done">Done</string>

</resources>