<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/vg1"/>

    <TextView
        android:id="@+id/dlg_tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text.Bold.Large"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_add_server_title"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/hg1"
        app:layout_constraintVertical_bias="0.0"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        android:id="@+id/hg1"/>


    <EditText
        android:id="@+id/dlg_et_server_ip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint_ip"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/hg1"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/dlg_spin_server_protocol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:entries="@array/protocols"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dlg_et_server_ip"
        app:layout_constraintRight_toLeftOf="@+id/vg1"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/hg2"
        app:layout_constraintVertical_bias="0.0"/>

    <EditText
        android:id="@+id/dlg_et_server_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_port"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="@+id/vg1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dlg_et_server_ip"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/hg2"
        app:layout_constraintVertical_bias="0.0"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"
        android:id="@+id/hg2"/>

    <EditText
        android:id="@+id/dlg_et_server_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoComplete"
        android:hint="@string/hint_name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hg2"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/dlg_et_server_descr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoComplete"
        android:hint="@string/hint_description"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/hg3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dlg_et_server_name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0"/>


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        android:id="@+id/hg3"/>

    <Button
        android:id="@+id/dlg_btn_ok"
        style="@style/Button.Large.Flat.Accent"
        android:layout_width="0dp"
        android:elevation="24dp"
        android:text="@string/dialog_action_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/hg3"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>